# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.170 2005/09/20 14:46:20 agaffney Exp $

*GLI-gtkfe-0.2 (13 Aug 2005)

  20 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  add 'network is already setup and running' checkbox on ClientConfig screen

  14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  browse button is disabled along with URI entry field

  13 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  FileBrowser is now URIBrowser
  change URIBrowser to take gtk.Entry object as an argument
  add URIBrowser to PortageTree.py

  5 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  file list is refreshed on "Refresh" or set host from mirror list
  ftp support in URI browser
  hide TreeView column header

  4 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  add FileBrowser.py and modify Stage.py to use it.
  add mirror list browsing

  3 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  sub-progress bar
  change 'etc_files' to 'self.etc_files' in RcDotConf
  set subprogress bar text to "Working..." after each pulse
  change pulse rate to 0.03

  1 Sep 2005; Preston Cody <codeman@gentoo.org>
  hack to fix gtkfe to write rc.conf in the etc_files structure.
  do the same fix for make.conf

  21 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>
  begin readying for gettext stuff
  make OK button in PartProperties default
  fix missing 'self'
  add GPL header to all files
  changed GNOME to gnome in ExtraPackages
  automatically call CC.start_failure_cleanup() on failure

  21 Aug 2005; John N. Laliberte <allanonjl@gentoo.org>
  Overhaul of ExtraPackages.py.  Now fully integrated into the backend.

  20 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>
  add ability to create reiserfs, xfs, and jfs
  fixed timezone loading

  17 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>
  change finish to Install on InstallSummary.py
  disable USE selection if GRP install
