@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.170 2005/09/20 14:46:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.171 2005/09/21 03:14:20 agaffney Exp $
 
 *GLI-gtkfe-0.2 (13 Aug 2005)
 
   20 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   add 'network is already setup and running' checkbox on ClientConfig screen
+  remove debugging print statements from PartProperties.py
 
   14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   browse button is disabled along with URI entry field
